--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,7 +5,7 @@
 <div class="container header-container">
     <div class="row">
         <div class="col">
-            
+
         </div>
     </div>
 </div>
@@ -20,7 +20,8 @@
             </h1>
             <div>
                 <h4 class="my-5">
-                    <a href="" class="shop-now-button btn btn-large rounded-0 text-uppercase py-3">Shop Now</a>
+                    <a href="{% url 'products' %}"
+                        class="shop-now-button btn btn-large rounded-0 text-uppercase py-3">Shop Now</a>
                 </h4>
             </div>
         </div>
